# CanavarGraphicsEngine

./: .gitmodules  BasicGraphicsEngine.pro  CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  CanavarGraphicsEngine.pro  Common.h  Controller.cpp  Controller.h  Cube.cpp  Cube.h  CustomMouseEvent.cpp  CustomMouseEvent.h  DirectionalLight.cpp  DirectionalLight.h  DummyCamera.cpp  DummyCamera.h  Framebuffer.cpp  Framebuffer.h  FramebufferFormat.cpp  FramebufferFormat.h  FreeCamera.cpp  FreeCamera.h  Haze.cpp  Haze.h  Helper.cpp  Helper.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  (+68 more)
Editor/: CMakeLists.txt  CanavarGraphicsEngineEditor.pro  Config.json  PostBuild.bat  Resources.qrc  Window.cpp  Window.h
Editor/Resources/Config/: Config.json  World_Crossfire.json  World_Empty.json
Editor/Resources/Models/f16/: f16.mtl
Editor/Resources/Models/f35b/: license.txt  scene.gltf
Editor/Src/: Window.cpp
Engine/: AABB.cpp  AABB.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  CanavarGraphicsEngine.pri  Common.cpp  Common.h  Config.cpp  Config.h  Controller.cpp  Controller.h  DummyCamera.cpp  DummyCamera.h  DummyNode.cpp  DummyNode.h  FirecrackerEffect.cpp  FirecrackerEffect.h  FreeCamera.cpp  FreeCamera.h  Gui.cpp  Gui.h  Haze.cpp  Haze.h  Helper.cpp  Helper.h  HosekData.h  HosekFunctions.h  IntersectionManager.cpp  IntersectionManager.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  LineStrip.cpp  LineStrip.h  Manager.cpp  Manager.h  (+53 more)
Engine/Include/: Common.h  Gui.h  Node.h  NozzleEffect.h  Shader.h
Engine/Resources/Shaders/: Basic.frag  Blur.frag  FirecrackerEffect.frag  FirecrackerEffect.vert  LineStrip.vert  MeshSelection.frag  MeshSelection.vert  Model.frag  ModelColored.frag  ModelColored.vert  ModelTextured.frag  NodeInfo.frag  NozzleEffect.frag  NozzleEffect.vert  NozzleEffectFirstPass.frag  NozzleEffectFirstPass.vert  PostProcess.frag  ScreenMultisampled.frag  Sky.frag  Sky.vert  Terrain.frag  Terrain.tcs  Terrain.tes  VertexSelection.frag  VertexSelection.vert
Engine/Src/: Gui.cpp  Node.cpp  NodeManager.cpp  RendererManager.cpp  Resources.qrc  Shader.cpp  ShaderManager.cpp
Resources/Data/aircraft/f16/: reset00.xml
Resources/Shaders/: Basic.frag  Basic.vert  Blur.frag  BlurMultisampled.frag  Model.frag  Model.vert  MotionBlur.frag  MotionBlur.vert  NodeSelection.frag  NodeSelection.vert  NodeSelectionMeshes.frag  NodeSelectionMeshes.vert  NodeSelectionVertices.frag  NodeSelectionVertices.vert  Normals.frag  Normals.geom  Normals.vert  NozzleBlur.frag  NozzleBlur.vert  NozzleEffect.frag  NozzleEffect.vert  NozzleParticles.frag  NozzleParticles.vert  PerlinWorley.comp  PerlinWorley.glsl  PostProcessing.frag  Screen.frag  Screen.vert  SimpleTerrain.frag  SimpleTerrain.vert  Sky.frag  SkyBox.frag  SkyBox.vert  SkyPostProcessing.frag  SkyPostProcessing.vert  Static.frag  Static.vert  Terrain.frag  Terrain.tcs  Terrain.tes  (+13 more)
Simulator/: Aircraft.cpp  Aircraft.h  AircraftController.cpp  AircraftController.h  CMakeLists.txt  CanavarFlightSimulator.pro  Config.json  Converter.cpp  Converter.h  PostBuild.bat  Window.cpp  Window.h
Simulator/Resources/Data/aircraft/f16/: reset00.xml
